--- a/style.css
+++ b/style.css
@@ -9,18 +9,20 @@ body{
 .name{
     display: flex;
     font-size: 40px;
-    padding: 50px;
-    color: white;
+    padding: 45px;
+    color: #b4b5b8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .list{
     display: flex;
     padding-right: 30px;
-    color: white;
+    color: #e9e9f0;
     list-style: none;
     gap: 70px;
     position: absolute;
-    top: 70px;
+    top: 63px;
     left: 80vh;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .emoji{
     color: white;
@@ -28,27 +30,29 @@ body{
     padding-right: 60px;
     gap: 50px;
     position: absolute;
-    top: 60px;
+    top: 56px;
     right: 40px;
 }
 h1{
     color: white;
     padding: 50px;
     font-size: 40px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 img{
-    width: 40%;
-    border-radius: 50vh;
+    width: 25%;
+    border-radius: 30vh;
     position: absolute;
-    top: 150px;
-    left: 72vh;
+    top: 140px;
+    left: 95vh;
 }
 .skills{
     width: 30%;
     color: white;
-    text-align: center;
-    padding: 20px;
+    position: absolute;
+    padding: 25px;
     font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .services{
     display: flex;
@@ -62,4 +66,15 @@ img{
 }
 .details{
     font-size: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
 }
+/* .box{
+    border: 1px solid black;
+    width: 60%;
+    padding: 30px;
+    position: absolute;
+    bottom: 90px;
+    left: 240px;
+    border-radius: 35px;
+} */
